appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true
- openLink: ${MAESTRO_DEV_CLIENT_URL}
- extendedWaitUntil:
    visible:
      id: login-email-input
    timeout: 30000
- tapOn:
    id: login-email-input
- inputText: student@lcmp.local
- tapOn:
    id: login-password-input
- inputText: ChangeMe123!
- hideKeyboard
- tapOn:
    id: login-submit-button
- extendedWaitUntil:
    visible:
      id: student-dashboard
    timeout: 30000
