appId: ${MAESTRO_APP_ID}
---
- runFlow: student-login.yaml
- tapOn:
    id: student-courses-tab
- extendedWaitUntil:
    visible:
      id: student-courses-screen
    timeout: 30000
- tapOn:
    id: student-schedule-tab
- extendedWaitUntil:
    visible:
      id: student-schedule-screen
    timeout: 30000
- tapOn:
    id: student-exams-tab
- extendedWaitUntil:
    visible:
      id: student-exams-screen
    timeout: 30000
- tapOn:
    id: student-more-tab
- tapOn: Attendance
- extendedWaitUntil:
    visible:
      id: student-attendance-screen
    timeout: 30000
